--- a/views/about.html
+++ b/views/about.html
@@ -79,17 +79,6 @@
         margin-top: 0;
       }
 
-      pre {
-        background-color: #f8f8f8;
-        padding: 10px;
-        border-radius: 5px;
-        overflow-x: auto;
-      }
-
-      pre code {
-        font-family: Consolas, monospace;
-      }
-
       ul {
         margin-top: 0;
       }
@@ -178,7 +167,9 @@
     </main>
     <footer>
       <p>Copyright ChadJCampbell 2023</p>
-      <a href="chadjcampbell.com">ChadJCampbell Dev Portfolio &#128279;</a>
+      <a href="https://chadjcampbell.com/" target="_blank"
+        >ChadJCampbell Dev Portfolio &#128279;</a
+      >
     </footer>
   </body>
 </html>
