--- a/views/index.html
+++ b/views/index.html
@@ -184,7 +184,9 @@ server.listen(3000, () =&gt; {
     </main>
     <footer>
       <p>Copyright ChadJCampbell 2023</p>
-      <a href="chadjcampbell.com">ChadJCampbell Dev Portfolio &#128279;</a>
+      <a href="https://chadjcampbell.com/" target="_blank"
+        >ChadJCampbell Dev Portfolio &#128279;</a
+      >
     </footer>
   </body>
 </html>
